--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,9 @@
 rootProject.name = "RandomDrops"
 
-dependencyResolutionManagement {
+	dependencyResolutionManagement {
 		repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
 		repositories {
 			mavenCentral()
-			maven { url 'https://jitpack.io' }
+			maven { url = uri("https://jitpack.io") }
 		}
-	}
-
-dependencies {
-	        implementation 'com.github.WMikaaa:RandomDrops:Tag'
 	}
