--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,6 @@ rootProject.name = "RandomDrops"
 		repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
 		repositories {
 			mavenCentral()
-			maven { url = uri("https://jitpack.io") }
+			maven { url 'https://jitpack.io' }
 		}
 	}
