--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ main: com.mika.randomdrops.RandomDrops
 version: 1.0
 api-version: 1.20
 author: Mika
-description: Random Drop Plugin
+description: Randomizer Plugin
